--- a/amplify.yml
+++ b/amplify.yml
@@ -4,15 +4,16 @@ frontend:
     # IMPORTANT - Please verify your build commands
     preBuild:
       commands:
+        - cd Client
         - yarn install
     build:
       commands: 
         - yarn run build
   artifacts:
     # IMPORTANT - Please verify your build output directory
-    baseDirectory: build
+    baseDirectory: Client/build
     files:
       - '**/*'
   cache:
     paths:
-      - node_modules/**/*
+      - Client/node_modules/**/*
