--- a/amplify.yml
+++ b/amplify.yml
@@ -5,10 +5,10 @@ frontend:
     preBuild:
       commands:
         - cd Client
-        - yarn install
+        - npm install
     build:
       commands: 
-        - yarn run build
+        - npm run build
   artifacts:
     # IMPORTANT - Please verify your build output directory
     baseDirectory: Client/build
