--- a/amplify.yml
+++ b/amplify.yml
@@ -8,7 +8,7 @@ frontend:
         - npm install
     build:
       commands: 
-        - npm run build
+        - yarn build
   artifacts:
     # IMPORTANT - Please verify your build output directory
     baseDirectory: Client/build
