--- a/amplify.yml
+++ b/amplify.yml
@@ -8,6 +8,7 @@ frontend:
         - npm install
     build:
       commands: 
+        - amplifyPush --simple
         - yarn build
   artifacts:
     # IMPORTANT - Please verify your build output directory
