amplify push added to yml

--- a/amplify.yml
+++ b/amplify.yml
@@ -6,6 +6,7 @@ frontend:
       commands:
         - cd Client
         - npm install
+        - amplify push
     build:
       commands: 
         - yarn build
