amplify push added to yml

--- a/amplify.yml
+++ b/amplify.yml
@@ -1,4 +1,9 @@
 version: 1
+backend:
+  phases:
+    build:
+      commands:
+        - amplifyPush --simple
 frontend:
   phases:
     # IMPORTANT - Please verify your build commands
@@ -6,7 +11,6 @@ frontend:
       commands:
         - cd Client
         - npm install
-        - amplifyPush --simple
     build:
       commands: 
         - yarn build
