amplify push added to yml

--- a/amplify.yml
+++ b/amplify.yml
@@ -11,6 +11,7 @@ frontend:
       commands:
         - cd Client
         - npm install
+        - amplifyPush --simple
     build:
       commands: 
         - yarn build
