auth, send email and usergroup added

--- a/Client/amplify/backend/backend-config.json
+++ b/Client/amplify/backend/backend-config.json
@@ -48,6 +48,16 @@
           ]
         }
       ]
+    },
+    "cherrye5eaae9eaCustomMessage": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda"
+    },
+    "cherrye5eaae9eaPostConfirmation": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda"
     }
   },
   "api": {
@@ -92,6 +102,33 @@
           ]
         }
       ]
+    }
+  },
+  "auth": {
+    "cherrye5eaae9ea": {
+      "service": "Cognito",
+      "providerPlugin": "awscloudformation",
+      "dependsOn": [
+        {
+          "category": "function",
+          "resourceName": "cherrye5eaae9eaCustomMessage",
+          "triggerProvider": "Cognito",
+          "attributes": [
+            "Arn",
+            "Name"
+          ]
+        },
+        {
+          "category": "function",
+          "resourceName": "cherrye5eaae9eaPostConfirmation",
+          "triggerProvider": "Cognito",
+          "attributes": [
+            "Arn",
+            "Name"
+          ]
+        }
+      ],
+      "customAuth": false
     }
   }
 }
