contact db added

--- a/Client/amplify/backend/backend-config.json
+++ b/Client/amplify/backend/backend-config.json
@@ -143,6 +143,10 @@
     "cherryebucket": {
       "service": "S3",
       "providerPlugin": "awscloudformation"
+    },
+    "contact": {
+      "service": "DynamoDB",
+      "providerPlugin": "awscloudformation"
     }
   }
 }
