added loading and error notifications

--- a/Client/amplify/backend/backend-config.json
+++ b/Client/amplify/backend/backend-config.json
@@ -181,6 +181,10 @@
     "contact": {
       "service": "DynamoDB",
       "providerPlugin": "awscloudformation"
+    },
+    "users": {
+      "service": "DynamoDB",
+      "providerPlugin": "awscloudformation"
     }
   }
 }
