--- a/Client/package.json
+++ b/Client/package.json
@@ -15,12 +15,14 @@
     "dotenv": "^8.2.0",
     "final-form": "^4.20.2",
     "final-form-material-ui": "^0.3.0",
+    "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-aws-s3": "^1.5.0",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
     "react-final-form": "^6.5.3",
+    "react-helmet": "^6.1.0",
     "react-loader-spinner": "^4.0.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
